Improve appearance of class picker, fix missing background options inheriting background of other options

--- a/style/component/form/ClassPicker.scss
+++ b/style/component/form/ClassPicker.scss
@@ -12,6 +12,8 @@
 		aspect-ratio: 1/1;
 		--wipe-animation-angle: -45deg;
 		background: var(--background) !important;
+		background-size: cover !important;
+		background-position: center !important;
 		border: none;
 		justify-content: center;
 		margin: 0;
@@ -115,7 +117,18 @@
 			&-4,
 			&-3 {
 				--size: 150%;
-				right: 150%;
+				right: 170%;
+				
+				&::before {
+					content: "";
+					display: block;
+					position: absolute;
+					left: 119%;
+					top: 50%;
+					width: 16px;
+					height: 1px;
+					background: linear-gradient(to right, #fff8, transparent);
+				}
 
 				.class-picker-button {
 					margin: -3px;
